minor bug fixes

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                  Interval (seconds before next frame): <input id="animRate" type="number" step="0.01" min="0.01" value="0.04" style="background: none; width: 150px; display: inline; padding: 0 0 0 15px; text-align: center;">
                 </h2>
                 <p id="btns" class="hide" style="text-align: center;">
-                  <a id="creategif" class="btn--blue bounceInUp bounceInUp1s pointer w100p" style="margin: 0;">
+                  <a id="creategif" class="btn--blue bounceInUp bounceInUp1s pointer w100p">
                     Create Gif
                   </a>
-                  <a id="exportgif" class="hide btn--success bounceInUp bounceInUp1s pointer w100p" download="download" style="margin: 0;">
+                  <a id="exportgif" class="hide btn--success bounceInUp bounceInUp1s pointer w100p" download="download">
                     Export Gif
                   </a>
                 </p>
